# boinc-lite

./: AUTHORS  CLARIFY  Makefile.am  README  autogen.sh  configure.ac
doc/: BoincLite.tex  ChangesToBoincServer.txt
example/: BoincLiteExample.c  Makefile.am
include/: BoincLite.h  Makefile.am
src/: BoincConfiguration.c  BoincConfigurationOSCallbacks.h  BoincError.c  BoincError.h  BoincHash.h  BoincHttp.h  BoincLite.c  BoincMem.h  BoincMutex.h  BoincProxy.c  BoincProxy.h  BoincScheduler.c  BoincUtil.c  BoincUtil.h  BoincWorkUnit.c  BoincWorkUnit.h  BoincXMLParser.h  Makefile.am  Makefile.cellos
src/linux-gnu/: BoincConfigurationOSCallbacks.c  BoincHash.c  BoincHttp.c  BoincMutex.c  BoincXMLParser.c  md5.c
test/: BoincConfigurationTest.c  BoincConfigurationTest.h  BoincHashTest.c  BoincHashTest.h  BoincHttpTest.c  BoincHttpTest.h  BoincLiteTests.c  BoincProxyTest.c  BoincProxyTest.h  BoincSchedulerTest.c  BoincSchedulerTest.h  BoincTest.c  BoincTest.h  BoincTestLinux.h  BoincTestOSCalls.c  BoincTestOSCalls.h  Makefile.am
test/linux-gnu/: BoincTestOSCalls.c  BoincTestOSCalls.h
