
noinst_PROGRAMS = BoincLiteExample
BoincLiteExample_SOURCES = BoincLiteExample.c
BoincLiteExample_LDADD = ../src/libBoincLite.la

#BoincLiteExample_SOURCES = ../include/BoincLite.h ../src/@TARGET@/BoincHttp.c ../src/BoincHttp.h ../src/BoincConfiguration.h ../src/BoincConfiguration.c ../src/@TARGET@/BoincConfigurationOSCallbacks.c ../src/BoincConfigurationOSCallbacks.h ../src/BoincError.c ../src/BoincError.h ../src/BoincProxy.h ../src/BoincProxy.c ../src/BoincConfigurationInternal.h ../src/BoincXMLParser.h ../src/@TARGET@/BoincXMLParser.c ../src/@TARGET@/BoincMutex.c  ../src/BoinxMutex.h ../src/BoincHash.h ../src/@TARGET@/BoincHash.c ../src/BoincScheduler.c ../src/BoincUtil.h ../src/BoincUtil.c ../src/BoincWorkUnit.h ../src/BoincWorkUnit.c BoincLiteExample.c


AM_CPPFLAGS = -I../include
#AM_CFLAGS = -std=c99 -ggdb
AM_CFLAGS =

