
lib_LTLIBRARIES = libBoincLite.la
libBoincLite_la_SOURCES = ../include/BoincLite.h @TARGET@/BoincHttp.c BoincHttp.h BoincConfiguration.h BoincConfiguration.c @TARGET@/BoincConfigurationOSCallbacks.c BoincConfigurationOSCallbacks.h BoincError.c BoincError.h BoincProxy.h BoincProxy.c BoincConfigurationInternal.h BoincXMLParser.h @TARGET@/BoincXMLParser.c @TARGET@/BoincMutex.c  BoinxMutex.h BoincHash.h @TARGET@/BoincHash.c BoincScheduler.c BoincUtil.h BoincUtil.c BoincWorkUnit.h BoincWorkUnit.c

AM_CPPFLAGS = -I../include
AM_CFLAGS = -std=c99
